--- a/01_introduccion_a_django.ipynb
+++ b/01_introduccion_a_django.ipynb
@@ -233,29 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda desplegará la estructura del proyecto.\n",
-    "\n",
-    "**Nota:**\n",
-    "    \n",
-    "El comando ```tree``` es propio de sistemas basados en GNU/Linux. En caso de que se ejecute el siguiente comando en un entorno distinto al de la VM proporcionada por Pythonista<sup>®</sup>, es posible que tenga que instalarlo. En otros sistemas no es posible ejecutar este comando."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "!tree"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* El resultado sería algo similar a lo siguiente:\n",
+    "* La estructura resultante sería algo similar a lo siguiente:\n",
     "\n",
     "```\n",
     ".\n",
@@ -381,33 +359,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* La siguiente celda desplegará la estructura del nuevo subdirectorio [```main```](main).\n",
-    "\n",
-    "**Nota:**\n",
-    "    \n",
-    "El comando ```tree``` es propio de sistemas basados en GNU/Linux. En caso de que se ejecute el siguiente comando en un entorno distinto al de la VM proporcionada por Pythonista<sup>®</sup>, es posible que tenga que instalarlo. En otros sistemas como Windows no es posible ejecutar este comando."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "!tree main"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "scrolled": true
    },
    "source": [
-    "El resultado sería algo similar a lo siguiente:\n",
+    "La estructura de archivos del directorio ```tutorial/main``` resultante sería algo similar a lo siguiente:\n",
     "\n",
     "```\n",
     "main\n",
@@ -495,7 +451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lo anterior indicaría que el servidor inició correctamente y el servicio puede ser accedido desde http://localhost:8000. El navegador desplegaría algo similar a la siguiente imagen:"
+    "Lo anterior indicaría que el servidor inició correctamente y el servicio puede ser accedido desde http://localhost:8000. El navegador desplegará algo similar a la siguiente imagen:"
    ]
   },
   {
@@ -509,7 +465,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Finalización de la ejecución del servicio.\n",
+    "### La aplicación de administración de *Django*.\n",
+    "\n",
+    "Además de la *URL* principal del servidor de *Django*, es posible acceder a la aplicación de administración del sitio, la cual se localiza en http://localhost:8000/admin y se vería de la siguiente forma:\n",
+    "\n",
+    "<img src=\"imagenes/01/admin.png\" width=\"700px\">\n",
+    "\n",
+    "**Nota:** La aplicación de administración requiere que se definan usuarios con los roles y permisos correspondientes, por lo que aún cuando está habilitada, no es funcional."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Finalización de la ejecución del servicio.\n",
     "\n",
     "Para detener la ejecución del servidor es necesario teclear <kbd>Ctrl</kbd><kbd>C</kbd>"
    ]
@@ -539,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
