--- a/02_el_protocolo_http.ipynb
+++ b/02_el_protocolo_http.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introducción a  *HTTP*."
+    "# El protocolo  *HTTP*."
    ]
   },
   {
@@ -177,7 +177,7 @@
     "\n",
     "Donde:\n",
     "\n",
-    "* ```<URL>``` es la *URL* de in recurso por el cual se hará la petición.\n",
+    "* ```<URL>``` es la *URL* de un recurso por el cual se hará la petición.\n",
     "* ```<argumento n>``` es un argumento que se aplicará a la petición.\n",
     "\n",
     "Estas funciones pueden ser:\n",
@@ -280,7 +280,7 @@
     "### Métodos.\n",
     "\n",
     "* El método ```close()```. Este método cierra la sesión entre el cliente y el servidor.\n",
-    "* El método ```json()``` puede convertir en un objeto tipo ```dict``` al contenido de una respuesta cuando el atributo ```Content Type``` sea de tipo ```'application/json'```. "
+    "* El método ```json()``` puede convertir en un objeto tipo ```dict``` al contenido de una respuesta cuando el atributo ```Content-Type``` sea de tipo ```'application/json'```. "
    ]
   },
   {
@@ -597,8 +597,8 @@
    "metadata": {},
    "source": [
     "* A continuación se utilizará la función ```requests.post``` para enviar una carga de datos a la *URL* \"https://httpbin.org/post, la cual es capaz de procesar peticiones utilizando el método ```POST``` de *HTTP*.\n",
-    "* La carga de dato se se enviará en formato *JSON*.\n",
-    "* El objeto resultante tendrá el nomre ```respuesta```."
+    "* La carga de datos se se enviará en formato *JSON*.\n",
+    "* Al objeto resultante se le dará el nombre ```respuesta```."
    ]
   },
   {
@@ -614,7 +614,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La clave ```'Content-Type'``` del objeto ```resultado.headers``` indica que el contenido son datos en formato *JSON*."
+    "* La clave ```'Content-Type'``` del atributo ```resultado.headers``` indica que el contenido fue enviado usando el formato *JSON*."
    ]
   },
   {
@@ -630,7 +630,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A continuación se desplegará el contenido de la respuesta del servidor."
+    "* A continuación se desplegará el contenido del atributo ```respuesta.content```."
    ]
   },
   {
@@ -646,7 +646,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* En vista de que el atrubito ```Content-Type``` del objeto respuesta es ```'application/json'```, es posible ejecutar el método ```respuesta.json()``` el cual regresará un objeto de tipo ```dict``` al que s ele dará el nombre ```respuesta_json```."
+    "* En vista de que el encabezado de la respuesta indica que el atributo```Content-Type``` es ```'application/json'```, es posible ejecutar el método ```respuesta.json()``` el cual regresará un objeto de tipo ```dict``` al que se le dará el nombre ```respuesta_json```."
    ]
   },
   {
@@ -668,12 +668,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "respuesta_json['json']"
+    "* A continuación se cerrará la sesión."
    ]
   },
   {
