--- a/03_configuracion_de_un_proyecto.ipynb
+++ b/03_configuracion_de_un_proyecto.ipynb
@@ -110,7 +110,9 @@
    "source": [
     "### La variable ```settings.SECRET_KEY```.\n",
     "\n",
-    "Esta variable contiene una cadena de caracteres que fue creada junto con la estructura incial del proyecto, la cual será utilizada para autenticar y cifrar los accesos a las aplicaciones"
+    "Esta variable contiene una cadena de caracteres que fue creada junto con la estructura incial del proyecto, la cual será utilizada para autenticar y cifrar los accesos a las aplicaciones.\n",
+    "\n",
+    "**Nota:** Se recomienda que en entornos de producción la cadena de caracteres relacionada a ```settings.SECRET_KEY``` no se escriba directamemte en el script ```settings.py```."
    ]
   },
   {
@@ -224,6 +226,8 @@
    "source": [
     "### La variable ``` settings.MIDDLEWARE```.\n",
     "\n",
+    "Define aquellos componentes que se ejecutan cuando el servidor y el cliente interactúan independientemente de la aplicacion que se esté ejecutando.\n",
+    "\n",
     "https://docs.djangoproject.com/en/2.2/ref/middleware/#module-django.middleware"
    ]
   },
@@ -242,7 +246,7 @@
    "source": [
     "### La variable ``` settings.STATIC_URL```.\n",
     "\n",
-    "Define las rutas en las que se encuentra el contenido estático del proyecto. "
+    "Define las rutas en las que se encuentra el contenido estático del proyecto. Más adelante se tratará el tema de contenido estático."
    ]
   },
   {
@@ -260,7 +264,7 @@
    "source": [
     "### La variable ```settings.WSGI_APPLICATION```.\n",
     "\n",
-    "Define el recurso encargado de gestionar las conexiones web mediante [```WSGI```}(https://en.wikipedia.org/wiki/Web_Server_Gateway_Interface)."
+    "Define el recurso encargado de gestionar las conexiones web mediante [```WSGI```](https://en.wikipedia.org/wiki/Web_Server_Gateway_Interface)."
    ]
   },
   {
