--- a/04_mvc_mvt_y_servicios_web.ipynb
+++ b/04_mvc_mvt_y_servicios_web.ipynb
@@ -85,36 +85,43 @@
    "source": [
     "## Aplicación web y servicios web.\n",
     "\n",
-    "### Aplicación web (web app).\n",
+    "### Aplicación web (\"web app\").\n",
     "\n",
-    "Una aplicación web por lo general está enfocada a realizar transacciones que son accesibles a un usuario final y en las que la interfaz juega un papel predominate.\n",
+    "Una aplicación web por lo general está enfocada a realizar transacciones que son accesibles a un usuario final mediante la la interfaz de un navegador web. Esta interfaz, también conocida como \"front-end\" es el medio de interacción entre el usuario y dicha aplicación.\n",
     "\n",
-    "### Servicios web (web services).\n",
+    "### Servicios web (\"web services\").\n",
     "\n",
-    "Un servicio web está enfocado a la realización de transacciones en la que el énfasis se hace en la correcta transmisión de datos mediante los protocolos *HTTP* o *HTTPS*.\n",
+    "Un servicio web está enfocado a la realización de transacciones en la que el énfasis se hace en el intercambio de datos entre el cliente y el servidor mediante al acceso a \"endpoints\".\n",
     "\n",
-    "### Puntos de acceso (*Endpoints*).\n",
+    "#### Puntos de acceso (\"endpoints\").\n",
     "\n",
-    "Un *endpoint* es una URL a la que se puede acceder a un servicio web en particular.\n",
-    "\n",
-    "### Aplicaciones web a partir de servicios web.\n",
-    "\n",
-    "Se ha vuelto una práctica recomendada, crear interfaces hechas a la medida de las necesidades y plataformas de acceso a los usuarios que interactúen con servicios web aprovechando el acceso a los endpoints.\n",
+    "Un \"endpoint\"  es una *URL* que expone un servicio web, dicho srvicio puede ser consumido por un cliente (no necesariamente un navegador web) en caso de que cuente con la identidad y los permisos correctos.\n",
     "\n",
     "\n",
     "### Interfaces de programación de aplicaciones (API).\n",
     "\n",
-    "Las API son un conjunto de endpoints que exponen diversas funcionalidades de un servicio web, las cuales pueden ser utilizadas para el desarrollo de aplicaciones web."
+    "Las API son un conjunto de endpoints que exponen diversas funcionalidades de un servicio web, las cuales pueden ser utilizadas para el desarrollo de aplicaciones web.\n",
+    "\n",
+    "### Aplicaciones web desde el front-end.\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## *API RESTFul* o *API REST*.\n",
+    "## *SOAP*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## *RESTFul* o *REST*.\n",
     "\n",
     "\n",
-    "*REST* corresponde a la ssiglas en inglés de *Representación de Estado Transaccional* y fue propuesta por primera vez en la [tesis doctoral de Roy Fielding](https://www.ics.uci.edu/~fielding/pubs/dissertation/rest_arch_style.htm) como una serie de reglas para aprovechar los métodos de HTTP con la finalidad de  crear servicios web ligeros y rápidos.\n",
+    "*REST* corresponde a las siglas en inglés de *Representación de Estado Transaccional* y fue propuesta por primera vez en la [tesis doctoral de Roy Fielding](https://www.ics.uci.edu/~fielding/pubs/dissertation/rest_arch_style.htm) como una serie de reglas para aprovechar los métodos de HTTP con la finalidad de  crear servicios web ligeros y rápidos.\n",
     "\n",
     "\n",
     "\n",
