--- a/05_urls_y_funciones_de_vista.ipynb
+++ b/05_urls_y_funciones_de_vista.ipynb
@@ -27,27 +27,31 @@
    "source": [
     "## *URLs* y funciones de vista.\n",
     "\n",
-    "*Django* tiene la capacidad de identificar patrones específicos a partir de la *URL* a la que pretende acceder un cliente, de tal manera que puede ligar una \"función de vista\" a dicho patrón."
+    "*Django* tiene la capacidad de identificar patrones específicos a partir de la *URL* a la que pretende acceder un cliente, de tal manera que puede crear una relación entre dicho patrón y una \"función de vista\".\n",
+    "\n",
+    "Una función de vista es aquella que recibe como primer argumento a un objeto ```request``` creado a partir de la petición enviada por un cliente y que a su vez regresa un objeto ```response``` al servidor de *Django* para que éste envié una respuesta al cliente que hizo la petición. \n",
+    "\n",
+    "Los objetos ```response```y ```request``` se estudiarán en capítulos próximos."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Los scripts ```urls.py```.\n",
+    "## Los scripts ```urls.py```.\n",
     "\n",
-    "Tanto el directorio de un proyecto como el directorio de una aplicación pueden contener un archivo ```urls.py```.\n",
+    "Estos scripts son usados por *Django* para relacionar una *URL* con una función de vista.\n",
     "\n",
-    "Estos scripts son usados por *Django* para relacionar una *URL* con objeto invocables (funciones o métodos) que a partir de este momento serán referidos como *funciónes de vista*."
+    "Es posible desplegar scripts ```urls.py``` tanto para el proyecto como para cada aplicación."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## El script ```urls.py``` de un proyecto.\n",
+    "### Configuración del archivo```urls.py``` de un proyecto.\n",
     "\n",
-    "Los proyectos de *Django* siempre deben de hacer referencia a al menos un archivo ```urls.py``` el cual se importaría como un módulo y a partir del cual pueden ser mapeados todas las *URLs* del proyecto y de sus aplicaciones.\n",
+    "Los proyectos de *Django* siempre deben de hacer referencia a al menos un archivo ```urls.py``` el cual se importaría como un módulo y a partir del cual pueden ser mapeadas las *URLs* del proyecto y de sus aplicaciones.\n",
     "\n",
     "La localización de este archivo es definda con la variable ```ROOT_URLCONF``` del archivo ```settings.py``` del proyecto."
    ]
@@ -83,7 +87,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* El archivo se localizaría entonces en ```tutorial/tutorial/urls.py``` y tendría el siguiente contenido (sin incluir docstrings): \n",
+    "### El script ```urls.py``` de un proyecto.\n",
+    "\n",
+    "El script ```urls.py``` del proyecto ```tutorial``` se localiza en ```tutorial/tutorial/urls.py``` y tiene un contenido similar al siguiente: \n",
     "\n",
     "``` python\n",
     "from django.contrib import admin\n",
@@ -92,7 +98,15 @@
     "urlpatterns = [\n",
     "    path('admin/', admin.site.urls),\n",
     "]\n",
-    "```"
+    "```\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda desplegará el contenido del script ```tutorial/tutorial/urls.py``` el cual fue creado al momento en el que se creó el proyecto ```tutorial```."
    ]
   },
   {
@@ -110,10 +124,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Este archivo realiza lo siguiente:\n",
+    "* El código de este script realiza lo siguiente:\n",
     "\n",
-    "    * Importa la función ```django.contrib.admin``` y le asigna el nombre ```admin```.\n",
-    "    * Importa la función ```django.urls.path``` y le asigna el nombre ```path```.\n",
+    "    * Importa la función ```admin()``` del módulo ```django.contrib```.\n",
+    "    * Importa la función ```path()``` del módulo ```django.urls.path```.\n",
     "    * Define al objeto tipo ```list``` con el nombre ```urlpatterns```."
    ]
   },
@@ -121,51 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### El paquete ```django.contrib```.\n",
-    "\n",
-    "Este paquete contiene una biblioteca de herramientas comunes de *Django*. \n",
-    "\n",
-    "La documentación de este paquete puede ser consultada en https://docs.djangoproject.com/en/2.2/ref/contrib/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import django.contrib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "help(django.contrib)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### El paquete ```django.contrib.admin```.\n",
-    "\n",
-    "Este paquete contiene un conjunte de herramientas capaces de desplegar un sitio de administración del proyecto.\n",
-    "\n",
-    "La documentación de este paquete puede ser consultada en https://docs.djangoproject.com/en/2.2/ref/contrib/admin/\n",
-    "\n",
-    "**Notas:**\n",
-    "* Aún cuando este paquete es cargado por defecto al crear un proyecto de *Django*, puede ser un recurso opcional.\n",
-    "* El sitio de administración requiere que se definan usuarios con los roles y permisos correspondientes. Ese tema se verá en capítulos posteriores."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### El paquete ```django.urls```.\n",
+    "## El paquete ```django.urls```.\n",
     "\n",
     "Este paquete contiene a las herramientas que permitirán identificar patrones de *URLs* específicas y ligarlas con  funciones de vista."
    ]
@@ -213,9 +183,9 @@
    "source": [
     "### La función ```django.urls.include()```.\n",
     "\n",
-    "Por convención, se utliza el nombre ```include``` cuando se desea importar algún archivo como un módulo de forma similar a la palabra reservada de Python ```import```. \n",
+    "En los lenguajes de programación como en el caso de *C*, se utliza la palabra clave *include* cuando se desea importar algún módulo de forma similar a la palabra reservada de Python ```import```. \n",
     "\n",
-    "En este caso, la función ```django.urls.include()``` permite cargar un archivo con una estructura de un archivo ```urls.py``` localizado en otra ruta.\n",
+    "En este caso, la función ```django.urls.include()``` permite importar un archivo con una estructura de un script ```urls.py``` localizado en otra ruta como si fuera un módulo dentro de un paquete.\n",
     "\n",
     "``` python\n",
     "django.urls.include('<patrón>', include('<módulo>')\n",
@@ -224,7 +194,7 @@
     "Donde:\n",
     "\n",
     "* ```<patrón>``` corresponde a un patrón de *URL*.\n",
-    "* ```<módulo>``` corresponde un archivo que contenga una estructura ```urls.py``` expresado como módulo. "
+    "* ```<módulo>``` corresponde la localización de un módulo con la estructura de un script ```urls.py```. "
    ]
   },
   {
@@ -240,7 +210,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejemplo ilustrativo.\n",
+    "## La aplicación de administación de *Django*.\n",
+    "\n",
+    "Django cuenta con una aplicación de administración de sitios llamada (```admin```) la cual se encuentra en el paquete ```django.contrib```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### El paquete ```django.contrib```.\n",
+    "\n",
+    "El paquete ```django.contrib``` es una biblioteca que contiene herramientas de uso común en el desarrollo de proyectos basados en *Django*.\n",
+    "\n",
+    "Para mayores referencias sobre el paquete ```django.contrib```, se puede consultar la siguiente liga: \n",
+    "\n",
+    "https://docs.djangoproject.com/en/2.2/ref/contrib/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### El paquete ```django.contrib.admin```.\n",
+    "\n",
+    "Este paquete contiene un conjunto de herramientas capaces de desplegar una aplicación de administración de un proyecto de *Django*.\n",
+    "\n",
+    "La documentación de este paquete puede ser consultada en https://docs.djangoproject.com/en/2.2/ref/contrib/admin/\n",
+    "\n",
+    "**Notas:**\n",
+    "* Aún cuando esta la aplicación de administración es habilitada automáticamente al momento en el que se crea un proyecto, puede ser un recurso opcional.\n",
+    "* La aplicación de administración requiere que se definan usuarios con los roles y permisos correspondientes. Ese tema se verá en capítulos posteriores."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejemplo ilustrativo sobre el uso de los scripts ```urls.py```.\n",
+    "\n",
+    "A continuación se crearán las reglas de patrones de *URLs* del proyecto ```tutorial``` y de la aplicación ```tutorial/main```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Configuración del archivo ```tutorial/tutorial/urls.py```.\n",
     "\n",
     "El archivo ```src/05/tutorial_urls.py``` contiene el siguiente código:\n",
     "\n",
@@ -298,6 +314,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda desplegará los cambios en el archivo ```tutorial\\tutorial\\urls.py```."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -310,6 +333,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Configuración del archivo ```tutorial/main/urls.py```.\n",
+    "\n",
     "En vista de que ```tutorial/tutorial/urls.py``` cargará como módulo el contenido de \n",
     "```tutorial/main/urls.py``` es necesario que el archivo de referencia exista.\n",
     "\n",
@@ -374,6 +399,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda desplegará los cambios en el archivo ```tutorial\\main\\urls.py```."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -386,20 +418,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Las funciones de vista.\n",
-    "\n",
-    "Una función de vista es aquella que le permite al servidor de *Django* enviar una respuesta (*response*) a partir de una petición *request* hecha por un cliente a la *URL* correspondiente. \n",
+    "## Mapeo de patrones de *URLs* con funciones de vista.\n",
     "\n",
     "Una vez que un cliente envía una petición a una *URL* gestionada por el servidor de *Django* ocurre lo siguiente:\n",
     "\n",
     "* El servidor verifica que la *URL* coincida con alguno de los patrones definidos en los archivos ```urls.py```. \n",
     "* En caso de que exista una coincidencia, se ejecutará la función de vista correspondiente de la siguiente forma:\n",
-    "    * Ingresando un objeto instanciado de ```django.http.HttpRequest``` como argumento. \n",
-    "    * La función deberá de regresar un objeto instanciado de alguna subclase de ```django.http.HttpResponse```. Dicho objeto será utilizado como base para que el servidor transmita una respuesta al cliente que hizo la petición.\n",
-    "* En caso de que no exista coincidencia, se gestionará un error de tipo ```404```.\n",
-    "\n",
-    "\n",
-    "**Nota:** Tanto las clases ```django.http.HttpRequest``` y ```django.http.HttpResponse```, así como la gestión de errores se estudiarán en capítulos subsecuentes."
+    "    * Ingresando un objeto ```request``` como primer argumento. \n",
+    "    * La función deberá de regresar un objeto ```response```. Dicho objeto será utilizado como base para que el servidor transmita una respuesta al cliente que hizo la petición.\n",
+    "* En caso de que no exista un patrón que coincida con la *URL* de la petición, se gestionará un código de estado ```404```."
    ]
   },
   {
@@ -408,7 +435,7 @@
    "source": [
     "## Los scripts *views.py*.\n",
     "\n",
-    "*Django* define en su estructura de archivos ```views.py```, los cuales contienen a las funciones de vista de las aplicaciones. "
+    "*Django* define en su estructura de archivos ```views.py```, los cuales contienen a las funciones de vista que gestionarán las peticiones hechas a las *URLs* a las que están ligadas."
    ]
   },
   {
@@ -420,6 +447,13 @@
     "El archivo ```tutorial/main/views.py``` es referido como un módulo en el archivo ```tutorial/main/urls.py```.\n",
     "\n",
     "Hasta el momento, este archivo no contiene ninguna función."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda desplegará el contenido del script ```tutorial/main/views.py```."
    ]
   },
   {
@@ -437,7 +471,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejemplo ilustrativo."
+    "## Ejemplo ilustrativo sobre los scripts ```view.py```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### El script ```tutorial/main/views.py```.\n",
+    "\n",
+    "Este script contiene las funciones de vista habilitadas para la aplicación ```main``` del proyecto ```tutorial```."
    ]
   },
   {
@@ -459,8 +502,8 @@
     "\n",
     "Este código realiza lo siguiente:\n",
     "\n",
-    "* Importa la clase ```HttpResponse``` desde el módulo ```django.http```.\n",
-    "* Define la función de vista ```index()```, la cual regresa una instancia de ```HttpResponse``` conteniendo código en *HTML*.\n",
+    "* Importa la clase ```HttpResponse``` desde el módulo ```django.http```, la cual es la clase base de los objetos ```response```.\n",
+    "* Define la función de vista ```index()```, la cual regresa un objeto ```response``` conteniendo código en *HTML*.\n",
     "* Define la función de vista ```vista()```, la cual regresa ```None```.\n"
    ]
   },
@@ -504,6 +547,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda desplegará los cambios en el script ```tutorial/main/views.py```."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -516,48 +566,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Las siguientes celda iniciará el servidor de *Django* del proyecto ```tutorial```."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%cd tutorial"
+    "## Arranque desde una terminal.\n",
+    "\n",
+    "* Desde una terminal diríjase al directorio ```tutorial```, en el cual se encuentra el script ```manage.py```.\n",
+    "* Ejecute el siguiente comando:\n",
+    "\n",
+    "\n",
+    "```\n",
+    "python manage.py runserver 0.0.0.0:8000\n",
+    "```\n",
+    "\n",
+    "**Nota:** \n",
+    "Es necesario que el firewall de su equipo esté configurado para transmitir desde el puerto ```8000```. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**ADVERTENCIAS:** \n",
-    "\n",
-    "* Al ejecutar la siguiente celda el servidor se inciará desde la notebook, por lo que para ejecutar cualquier otra celda es necesario interrumpir la ejecución del kernel.\n",
-    "\n",
-    "* Asegúrese que no haya otro servicio escuchando en el puerto ```5000```."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "!python manage.py runserver 0.0.0.0:5000"
+    "## Resultados."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Al acceder a [```http://localhost:5000/admin```](http://localhost:5000/admin) aparecerá una pantalla de registro.\n",
-    "* Al acceder a [```http://localhost:5000/main/```](http://localhost:5000/main/) aparecerá un mensaje de encabezado desplegando ```Hola, mundo.```.\n",
-    "* Al acceder a [```http://localhost:5000/main/vista```](http://localhost:5000/main/vista) se mostrará un mensaje de error. Debido a que *Django* está configurado en modo de depuración, desplegará los detalles del error de ejecución.\n",
-    "* Al acceder a cualquier otra *URL* distinta a las indicadas, se mostrará un mensaje de error ```404```. Debido a que *Django* está configurado en modo de depuracion, desplegará los detalles y los patrones de ```URL``` válidos."
+    "### La ruta ```/main/```.\n",
+    "\n",
+    "Al acceder a http://localhost:8000/main/ aparecerá un mensaje de encabezado desplegando ```Hola, mundo.```.\n",
+    "\n",
+    "El navegador desplegará algo similar a la siguiente imagen:\n",
+    "\n",
+    "<img src=\"imagenes/05/hola.png\" width=\"400px\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### La ruta ```/main/vista```.\n",
+    "\n",
+    "Al acceder a http://localhost:8000/main/vista se mostrará un mensaje de error en vista de que el objeto que regresa la función ```tutorial.main.views.vista()``` no regresa un objeto ```response```. Debido a que *Django* está configurado en modo de depuración, desplegará los detalles del error de ejecución.\n",
+    "\n",
+    "El navegador desplegará algo similar a la siguiente imagen:\n",
+    "\n",
+    "\n",
+    "<img src=\"imagenes/05/error.png\" width=\"600px\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rutas no definidas.\n",
+    "\n",
+    "* Al acceder a cualquier otra *URL* distinta a las indicadas, se mostrará un mensaje de estado ```404```.  Debido a que *Django* está configurado en modo de depuracion, desplegará los detalles y los patrones de ```URL``` válidos.\n",
+    "\n",
+    "El navegador desplegará algo similar a la siguiente imagen:\n",
+    "\n",
+    "<img src=\"imagenes/05/404.png\" width=\"600px\">"
    ]
   },
   {
@@ -585,7 +652,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
