--- a/06_peticiones_y_respuestas.ipynb
+++ b/06_peticiones_y_respuestas.ipynb
@@ -42,11 +42,12 @@
    "source": [
     "## El módulo ```django.http```.\n",
     "\n",
-    "Este módulo contiene diversos recursos que permiten a *Django* desplegar servicios basados en el protocolo *HTTP*.\n",
+    "Este módulo contiene diversos recursos que permiten a *Django* desplegar servicios basados en el protocolo *HTTP* y entre otros objetos contiene:\n",
     "\n",
-    "* Contiene varias clases que permiten definir y capturar como si fueran excepciones diversos estados de *HTTP* distintos a ```200```.\n",
-    "* Contiene a la clase ```django.http.HttpRequest```.\n",
-    "* Contiene a la clase ```django.http.HttpResponse```.\n",
+    "* A la clase ```django.http.HttpRequest```.\n",
+    "* A la clase ```django.http.HttpResponse```.\n",
+    "* A la clase ```django.http.JsonResponse```.\n",
+    "* A algunas clases que permiten gestionar algunos códigos de estado de *HTTP* distintos a ```200```.\n",
     "\n",
     "La referencia a estas clases puede ser consultada desde https://docs.djangoproject.com/en/2.2/ref/request-response/"
    ]
@@ -59,16 +60,16 @@
     "\n",
     "A los objetos instanciados de la clase ```django.http.HttpRequest```, se les conoce como ```request```. A partir de este momento se utilizará dicho nombre para hacer referencia a dichos objetos.\n",
     "\n",
-    "* El estado de estos objetos contiene información acerca de la petición formulada desde un cliente.\n",
-    "* Además, estos objetos cuentan con métodos que nos permiten facilitar el manejo de las peticiones.\n",
-    "* *Django* ingresa un objeto ```request``` como el primer argumento de una función de vista."
+    "* Cuando el servidor de *Django* recibe una petición que coincide con un patrón de *URL*, este instancia un objeto ```request``` y lo ingresa a la función de vista relacionada al patrón de *URL* como primer argumento.\n",
+    "* El estado de un objeto ```request``` contiene información de la petición formulada desde un cliente y recibida por el servidor de *Django*.\n",
+    "* Los objetos ```request``` cuentan con métodos que nos permiten gestionar los datos de las peticiones."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Atributos de los objetos *request*.\n",
+    "### Atributos de los objetos ```request```.\n",
     "\n",
     "* ```scheme```: el cual contiene una cadena de caracteres que describe el esquema de autenticación utilizado para la conexión conforme a la [*RFC7617*](https://tools.ietf.org/html/rfc7617). Generalmente es ```'http'``` o ```'https'```. \n",
     "* ```body```: el cual contiene datos que han sido enviados dentro de la petición en formato binario, como imágenes, videos, etc.\n",
@@ -92,9 +93,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La clase ```django.http.HttpResponse```.\n",
+    "## Los objetos ```response```.\n",
     "\n",
-    "Existen diversos tipos de respuestas (responses) que *Django* puede enviar a un cliente. Sin embargo, casi todos los objetos *response* son instancias de subclases de ```django.http.HttpResponse```.\n",
+    "Las funciones de vista\n",
+    "\n",
+    "La clase ```django.http.HttpResponse```.\n",
+    "\n",
+    "Existen diversos tipos de respuestas (responses) que *Django* puede enviar a un cliente. Sin embargo, casi todos los objetos ```response``` son instancias de subclases de ```django.http.HttpResponse```.\n",
     "\n",
     "Las funciones de vista deben de regresar objetos instanciados de dichas clases.\n",
     "\n",
@@ -126,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejemplo ilustrativo.\n",
+    "## Ejemplo ilustrativo.\n",
     "\n",
     "El archivo ```src/06/views.py```  contiene el siguiente código:\n",
     "\n",
