--- a/08_json_con_django.ipynb
+++ b/08_json_con_django.ipynb
@@ -12,6 +12,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# El formato *JSON* y *Django*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**ADVERTENCIA:**  \n",
     "\n",
     "Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas."
@@ -361,8 +368,8 @@
     "\n",
     "La clase ```django.http.JsonResponse``` es una subclase de ```django.http.HttpResponse```, la cual permite que una función de vista regrese una respuesta en formato *JSON* a partir de un objeto ```dict```.\n",
     "\n",
-    "``` python\n",
-    "JsonResponse(<objeto>)\n",
+    "```\n",
+    "JsonResponse(<objeto tipo dict>)\n",
     "```"
    ]
   },
