--- a/09_objetos_request_y_response.ipynb
+++ b/09_objetos_request_y_response.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Las clases del módulo ```django.http``` (servidor)."
+    "# Objetos ```request``` y ```response```."
    ]
   },
   {
@@ -32,7 +32,7 @@
     "Este capítulo está dividido en dos notebooks:\n",
     "\n",
     "* La parte teórica y del servidor, corresponde al presente documento.\n",
-    "* La parte del cliente, corresponde a la notebook [```10_clases_de_django_http_cliente.ipynb```](10_clases_de_django_http_cliente.ipynb).\n",
+    "(10_clases_de_django_http_cliente.ipynb).\n",
     "\n",
     "La notebook del cliente consume los recursos que el servidor que esta notebook despliega, por lo que es necesario que el servidor de Django de esta notebook esté en ejecución cuando la notebook del cliente se esté ejecutando."
    ]
