--- a/18_lenguaje_de_plantillas_de_django.ipynb
+++ b/18_lenguaje_de_plantillas_de_django.ipynb
@@ -35,9 +35,10 @@
     "* Realizar ciclos.\n",
     "* Heredar de contenidos.\n",
     "\n",
-    "## Operaciones que no puede realizar el *DTL*.\n",
+    "## Operaciones que NO puede realizar el *DTL*.\n",
     "\n",
     "* Ejecutar expresiones numéricas.\n",
+    "* Acceder a atributos o métodos de un objeto.\n",
     "* Definir variables en un ámbito global.\n",
     "* Definir funciones o macros.\n",
     "* Acceder a elementos de una colección mediante la sintaxis de indices usando corchetes.\n",
@@ -68,8 +69,12 @@
     "*DTL* no soporta los operadores de Python para interpretar expresiones, sino que utiliza una serie de filtros mediante la siguiente sintaxis.\n",
     "\n",
     "```\n",
-    "{{ <elemento>|<filtro 1>:\"<argumento>\"|<filtro 2>:\"<argumento>\"| ... |<filtro n>:\"<argumento>\" \n",
+    "{{ <elemento>|<filtro 1>:\"<argumento 1>\"|<filtro 2>:\"<argumento 2>\"| ... |<filtro n>:\"<argumento n>\" \n",
     "```\n",
+    "\n",
+    "Donde: \n",
+    "* ```<elemento> es un objeto de python que puede ser procesado\n",
+    "\n",
     "* Las expresiones permiten \"concatentar\" filtros, por lo que la salida del filtro de la izquierda es la entrada del filtro de la derecha.\n",
     "* Los filtros pueden incluir argumentos.\n",
     "\n",
