--- a/20_gestion_de_formularios.ipynb
+++ b/20_gestion_de_formularios.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://docs.djangoproject.com/en/2.1/topics/forms/"
+    "https://docs.djangoproject.com/en/2.2/topics/forms/"
    ]
   },
   {
@@ -29,20 +29,24 @@
    "source": [
     "## Formularios en HTML.\n",
     "\n",
-    "Las formularios en HTML se definen mediante la etiqueta *&lt;form&gt;* de la siguiente forma:\n",
+    "Las formularios en HTML se definen mediante la etiqueta ```<form>``` de la siguiente forma:\n",
     "\n",
     "```\n",
-    "<form action=\"una acción\" method=\"<método\">\n",
+    "<form action=\"[acción]\" method=\"[método]\">\n",
     "...\n",
     "...\n",
     "</form>\n",
     "```\n",
-    "Los formularios fueron creados para interactuar con el usuario obteniendo información y/o ejecutando una acción a partir de elementos tipo ```<input>```.\n",
     "\n",
-    "Las acciones pueden:\n",
-    "* Enviar la información recabada a una URL específica.\n",
-    "   * El método HTTP de envío de la información puede ser *GET* o *POST*.\n",
-    "   * O por medio de la ejecución de una función de Javascript.\n",
+    "Donde: \n",
+    "\n",
+    "* ```[acción]``` puede ser:\n",
+    "    * Una *URL* a la que se enviarán los datos obtenidos.\n",
+    "    * La referencia a una función, generalmente de *Javascript*, capaz de procesar los datos obtenidos.\n",
+    "* ```[método]``` define al método  que se utilizará para enviar los datos del formulario y puede ser ```GET``` o ```POST```.\n",
+    "   \n",
+    "Las etiquetas ```<form>``` sirven como contenedores para otras etiquetas *HTML* que pueden interactura con el usuario para ingresaqr datos. La etiqueta más común es ```<input>```.\n",
+    "\n",
     "\n",
     "Para mayor referencia consultar en https://www.w3schools.com/html/html_forms.asp"
    ]
@@ -53,10 +57,10 @@
    "source": [
     "## Elementos de un formulario en *Django*.\n",
     "\n",
-    "Django cuenta con un manejo muy avanzado de formularios definiendo los siguientes elementos.\n",
+    "*Django* puede crear y gestionar formularios mediante los siguientes elementos.\n",
     " \n",
-    "* Formularios.\n",
-    "* Campos (field).\n",
+    "* Formularios (\"forms\").\n",
+    "* Campos (\"fields\").\n",
     "* Widgets.\n",
     "* Validadores."
    ]
@@ -65,31 +69,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## El archivo *forms.py*.\n",
+    "## Los archivo ```forms.py```.\n",
     "\n",
-    "Por convención, el archivo *forms.py* contiene las definiciones de formas de una aplicación."
+    "Los archivos ```forms.py``` contienen las definiciones de formularios de una aplicación."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La clase *django.forms.Form*.\n",
+    "## La clase ```django.forms.Form```.\n",
     "\n",
-    "La clase *django.forms.Form* es el elemento principal de una forma en *Django*. \n",
+    "La clase ```django.forms.Form``` es la clase base para la creación de formularios. A partir de sus subclases es posible diseñar otros formularios.\n",
     "\n",
-    "Un objeto instanciado de esta clase se puede contener atributos muy similares a los definidos en los modelos, los cuales se conocen como campos (fields).\n",
+    "Para mayor referencia sobre esta clase  se puede consultar la siguiente liga:\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.1/ref/forms/api/#django.forms.Form"
+    "https://docs.djangoproject.com/en/2.2/ref/forms/api/#django.forms.Form"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La clase *django.forms.ModelForm*.\n",
+    "## La clase ```django.forms.ModelForm```.\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.1/topics/forms/modelforms/#django.forms.ModelForm"
+    "https://docs.djangoproject.com/en/2.2/topics/forms/modelforms/#django.forms.ModelForm"
    ]
   },
   {
@@ -98,16 +102,16 @@
    "source": [
     "## Los campos.\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.1/ref/forms/fields/#built-in-field-classes"
+    "https://docs.djangoproject.com/en/2.2/ref/forms/fields/#built-in-field-classes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Los *widgets* de los campos.\n",
+    "## Los \"widgets\" de los campos.\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.1/ref/forms/widgets/"
+    "https://docs.djangoproject.com/en/2.2/ref/forms/widgets/"
    ]
   },
   {
@@ -124,7 +128,7 @@
    "metadata": {},
    "source": [
     "## Validadores.\n",
-    "https://docs.djangoproject.com/en/2.1/ref/validators/"
+    "https://docs.djangoproject.com/en/2.2/ref/validators/"
    ]
   },
   {
@@ -135,7 +139,7 @@
     "\n",
     "Cross Site Request Forgery.\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.1/ref/csrf/\n",
+    "https://docs.djangoproject.com/en/2.2/ref/csrf/\n",
     "\n",
     "django.middleware.csrf.CsrfViewMiddleware\n",
     "\n",
@@ -168,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La función *django.shortcuts.render()*\n",
+    "## La función ```django.shortcuts.render()```.\n",
     "\n",
     "```\n",
     "render(request, '<plantilla>', context=<contexto>)\n",
@@ -195,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/21/urls.py tutorial/api/urls.py"
+    "%cp src/20/urls.py tutorial/api/urls.py"
    ]
   },
   {
@@ -220,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/21/forms.py tutorial/api/forms.py"
+    "%cp src/20/forms.py tutorial/api/forms.py"
    ]
   },
   {
@@ -247,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/21/template_views.py tutorial/api/template_views.py"
+    "%cp src/20/template_views.py tutorial/api/template_views.py"
    ]
   },
   {
@@ -274,7 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/21/forma.html tutorial/templates/forma.html"
+    "%cp src/20/forma.html tutorial/templates/forma.html"
    ]
   },
   {
@@ -315,11 +319,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\".\" no se reconoce como un comando interno o externo,\n",
+      "programa o archivo por lotes ejecutable.\n"
+     ]
+    }
+   ],
    "source": [
-    "!./manage.py runserver 0.0.0.0:5000"
+    "!./manage.py runserver 0.0.0.0:8000"
    ]
   },
   {
@@ -354,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
